# knowledge_admin

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
k_admin/: convert_util.py  doc_2_audio.py  extract_text.py  summarize.py  text_util.py
k_admin/scripts/: doc_2_audio.py  extract_text.py  summarize_text.py
src/: convert_util.py  text_util.py
